Update #1189 Fixed colours changing on mobile for dark and light theme.

--- a/app/assets/stylesheets/themes/_dark-theme.scss
+++ b/app/assets/stylesheets/themes/_dark-theme.scss
@@ -54,9 +54,9 @@ $pulsate-green-end:#aaf25c;
 $pulsate-red-start:$negative-color;
 $pulsate-red-end:#ef4040;
 
-$modal-bg-color: #2a2a2a;
+$modal-bg-color: #4b5158;
 
-$mobile-input-bg: #4b5158;
+$mobile-input-bg: #2d2d2d;
 
 .darkTheme {
   @include theme(
