--- a/app/assets/stylesheets/themes/_light-theme.scss
+++ b/app/assets/stylesheets/themes/_light-theme.scss
@@ -55,7 +55,7 @@ $pulsate-green-end:#70c117;
 $pulsate-red-start:$negative-color;
 $pulsate-red-end:#e87f84;
 
-$modal-bg-color: #fff;
+$modal-bg-color: #dadada;
 
 $mobile-input-bg: $input-background;
 
